# cargo-generate-template

./: .editorconfig  .gitignore  Cargo.toml  README.PROJECT.md  README.md  cargo-generate.toml  gitignore  post-setup.rhai  pre-setup.rhai
licenses/: LICENSE-BSD2  LICENSE-BSD3  LICENSE-UNLICENSE
optional/: flame_example.rs  puffin_example.rs
optional/benches/: README.md  fib_bench.rs
optional/examples/: hello_world.rs
optional/tests/: README.md  common.rs  integration_test.rs  test_with_common_code.rs
optional/vscode/: project.code-workspace
optional/wf/: coverage.yml  rust.yml
src/: lib.rs  main.rs  utils.rs
src/utils/: mod.rs
wf/: rust.yml  rust_nightly.yml
